[package]
name = "flam3-render"
description = "A command line tool for rendering flam3 fractal flames."
repository = "https://github.com/Mossop/fractal-flame"
readme = "README.md"
version = "0.0.1"
authors = ["Dave Townsend <dtownsend@oxymoronical.com>"]
license = "GPL"
edition = "2021"

[dependencies]
flam3 = { path = "../flam3" }
clap = { version = "^3.1.16", features = ["derive", "env"] }
flexi_logger = "^0.22.3"
image = "^0.24.2"

[features]
fastmath = ["flam3/fastmath"]
libm = ["flam3/libm"]
logging = ["flam3/logging"]
