[package]
name = "flam3"
description = "flam3 functions for Rust."
repository = "https://github.com/Mossop/fractal-flame"
readme = "README.md"
version = "0.0.1"
authors = ["Dave Townsend <dtownsend@oxymoronical.com>"]
license = "GPL"
edition = "2021"

[dependencies]
serde = { version = "^1.0.137", features = ["derive"] }
serde-xml-rs = "^0.5.1"
xml-rs = "^0.8.4"
educe = "^0.4.19"
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
log = "^0.4.17"
rand_isaac = "^0.3.0"
rand = "^0.8.5"
uuid = { version = "^1.0.0", features = ["v4"] }
lazy_static = "^1.4.0"
image = "^0.24.2"
palette = "^0.6.0"
libm = { version = "^0.2.2", optional = true }

[features]
fastmath = []
libm = ["dep:libm"]
logging = []

[dev-dependencies]
image-compare = "^0.2.2"
